--- a/LoggerClient/LoggerClient.csproj
+++ b/LoggerClient/LoggerClient.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageTags>logger</PackageTags>
+    <RepositoryUrl>https://github.com/osamaeshmilh/LoggerClientNet</RepositoryUrl>
+    <PackageId>SDDP-LoggerClientNet</PackageId>
   </PropertyGroup>
 
 </Project>
