--- a/LoggerClient/LoggerClient.csproj
+++ b/LoggerClient/LoggerClient.csproj
@@ -8,11 +8,13 @@
     <PackageTags>logger</PackageTags>
     <RepositoryUrl>https://github.com/osamaeshmilh/LoggerClientNet</RepositoryUrl>
     <PackageId>SDDP-LoggerClientNet</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
